sample_data/000/000e05bfae4299fffa114e922e16edede68289d8
=========================Command==============================


module.exports = class cat {
  constructor(){
      this.name = 'cat',
      this.alias = ['c'],
      this.usage = '!!!cat'
  }
  run(bot, message, args){

    const {body} = await snek.get("http://thecatapi.com/api/images/get");

  const dogembed = new Discord.RichEmbed()
    .attachFile({attachment: body, name: "cat.jpg"})
    .setColor("#9b0090")
    .setTitle("Meow :cat:")
    .setImage("attachment://cat.jpg");

  message.channel.send(dogembed);
  message.react("452183703267835910");
  }
};


=========================error============================

const {body} = await snek.get("http://thecatapi.com/api/images/get");
                         ^^^^

SyntaxError: Unexpected identifier
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:607:28)
    at Object.Module._extensions..js (module.js:654:10)
    at Module.load (module.js:556:32)
    at tryModuleLoad (module.js:499:12)
    at Function.Module._load (module.js:491:3)
    at Module.require (module.js:587:17)
    at require (internal/module.js:11:18)
    at CommandHandler._loadFrom (C:\Users\User_\Desktop\Boty\WellsbotBeta\node_modules\djs-commands\CommandHandler.js:28:26)